--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,15 +1,16 @@
-name: "Newman Tests
+# This is a basic workflow to help you get started with Actions
 
-on: [push, pull-request]
+name: "Newman Tests"
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-     container:
+    container: 
       image: postman/newman
     steps:
-    - name: Checkout
-      uses: actions/Checkout@v2
-      
-    - name: Run API Tests
-      run: newman run "Restful Booker BVT.postman_collection.json" -e Production.postman_environment.json
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Run API Tests
+        run: newman run "Restful Booker BVT.postman_collection.json" -e Production.postman_environment.json
